# networking

./: .gitignore
aws-deployement/build-server/: Dockerfile  script.js
aws-deployment/api-server/: index.js  log_events.sql  package.json
aws-deployment/build-server/: script.js
aws-deployment/s3-reverse-proxy/: index.js
ecr-eks/: Dockerfile
ecr-eks/.github/workflow/: ecr_push.yml  eks_deploy.yml
ecr-eks/k8s/: app_deployment.yml  app_service.yml  secrets.yaml
google-aws/: AWS.md
google-aws/api-server/: index.js  log_events.sql  package-lock.json  package.json
google-aws/api-server/prisma/: schema.prisma
google-aws/build-server/: AWS.md  Dockerfile  package-lock.json  package.json  script.js
google-aws/s3-reverse-proxy/: index.js
kafka/: Makefile  docker-compose.yml  package.json  producer.js  run.sh
kafka/src/: admin.js  client.js  consumer.js
multithread_server_rust/: 404.html  Cargo.toml  doc.md  error.xml  index.html  index.xml  response.json
multithread_server_rust/src/: lib.rs  main.rs  mutex.rs
networking/calc/: Cargo.toml
nginx/: run.sh
nginx/aws/: README.md
nginx/etc/: index.html  nginx.conf
playwright/: package-lock.json  package.json
reverse-proxy/: Cargo.toml
reverse-proxy/src/: main.rs
reverse_proxy/: Cargo.toml
reverse_proxy/v1/: Cargo.toml
reverse_proxy/v2/: Cargo.toml
reverse_proxy/v2/src/: connection.rs  handler.rs  main.rs  state.rs
rust_os/: Cargo.toml
rust_os/mutex/src/: main.rs  (+2 more)
smtp/: index.js  package-lock.json  package.json
system-design/cloud-file-sharing/: approach.md  system_requirements.md
(+3 files in other folders)
