[package]
name = "v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = {version = "1.2.0", features = ["full"]} 
tokio = {version = "1.36.0", features = ["full"]}
tower = {version = "0.4.13", features = ["full"]}
hyper-util = { version = "0.1.3", features = ["full"] }
http-body-util = "0.1" 
hyper-rustls = "0.26.0"
